--- a/demo/index.html
+++ b/demo/index.html
@@ -6,24 +6,47 @@
 
   <title>flip-clock demo</title>
 
-  <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
+  <script src="../../../@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
 
-  <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
-  <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
-  <link rel="import" href="../flip-clock.html">
+  <script type="module" src="../../../@polymer/iron-demo-helpers/demo-pages-shared-styles.js"></script>
+  <script type="module" src="../../../@polymer/iron-demo-helpers/demo-snippet.js"></script>
+  <script type="module" src="../flip-clock.js"></script>
 
-  <custom-style>
+  <!-- FIXME(polymer-modulizer):
+        These imperative modules that innerHTML your HTML are
+        a hacky way to be sure that any mixins in included style
+        modules are ready before any elements that reference them are
+        instantiated, otherwise the CSS @apply mixin polyfill won't be
+        able to expand the underlying CSS custom properties.
+        See: https://github.com/Polymer/polymer-modulizer/issues/154
+        -->
+    <script type="module">
+const $_documentContainer = document.createElement('template');
+
+$_documentContainer.innerHTML = `<custom-style>
     <style is="custom-style" include="demo-pages-shared-styles">
     </style>
-  </custom-style>
-  <style>
+  </custom-style>`;
+
+document.body.appendChild($_documentContainer.content);
+</script>
+  <script type="module">
+const $_documentContainer = document.createElement('template');
+
+$_documentContainer.innerHTML = `<style>
     .centered {
       max-width: 620px;
     }
-  </style>
+  </style>`;
+
+document.body.appendChild($_documentContainer.content);
+</script>
 </head>
 <body>
-<div class="vertical-section-container centered">
+<script type="module">
+const $_documentContainer = document.createElement('template');
+
+$_documentContainer.innerHTML = `<div class="vertical-section-container centered">
   <h3>Basic flip-clock</h3>
   <demo-snippet>
     <template>
@@ -33,21 +56,24 @@
   <h3>Timer flip-clock</h3>
   <demo-snippet>
     <template>
-      <flip-clock display-mode="timer" show-buttons></flip-clock>
+      <flip-clock display-mode="timer" show-buttons=""></flip-clock>
     </template>
   </demo-snippet>
   <h3>Countdown flip-clock</h3>
   <demo-snippet>
     <template>
-      <flip-clock display-mode="countdown" start-from="20" show-buttons></flip-clock>
+      <flip-clock display-mode="countdown" start-from="20" show-buttons=""></flip-clock>
     </template>
   </demo-snippet>
   <h3>Countdown without hours flip-clock</h3>
   <demo-snippet>
     <template>
-      <flip-clock display-mode="countdown" start-from="20" show-buttons hide-hours></flip-clock>
+      <flip-clock display-mode="countdown" start-from="20" show-buttons="" hide-hours=""></flip-clock>
     </template>
   </demo-snippet>
-</div>
+</div>`;
+
+document.body.appendChild($_documentContainer.content);
+</script>
 </body>
 </html>
